fixing overflow 2.0

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1445,7 +1445,7 @@ h2 {
 
     /* --- footer group --- */
     footer {
-        margin-top: 40px;
+        margin-top: 16px;
         flex-shrink: 0;
         width: 100%;
     }
